# drf-project-template

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
base/: managers.py
base/tasks/: email.py  utils.py
drf_project_template/: asgi.py  settings.py  urls.py  wsgi.py
drf_project_template/apps/accounts/: adapters.py  apps.py  managers.py  urls.py  utils.py
drf_project_template/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_userprofile.py
drf_project_template/apps/accounts/models/: profile.py  user.py
drf_project_template/apps/accounts/serializers/: login.py  register.py
drf_project_template/apps/accounts/tests/: test_register.py
drf_project_template/apps/accounts/views/: __init__.py  login.py  register.py  verify.py
drf_project_template/apps/base/: managers.py  models.py
drf_project_template/apps/base/tasks/: email.py  utils.py
drf_project_template/settings/: base.py  local.py
drf_project_template/templates/allauth/account/email/: email_confirmation_message.html  email_confirmation_signup_message.html  email_confirmation_signup_subject.txt
drf_project_template/templates/base/: base.html
